# SW-Firefight

./: .gitignore  README.md  confederacy_of_independent_systems.py  core.py  dev_tests.py  firefight.py  galactic_empire.py  galactic_republic.py  mandalore.py  pyproject.toml  rebel_alliance.py
army_lists/: confederacy_of_independent_systems.py  galactic_empire.py  galactic_republic.py  mandalore.py  rebel_alliance.py
army_lists/empire/: galactic_empire.py  galactic_empire.tex
army_lists/seperatist/: seperatist_alliance.py
faction_rosters/: generate_rosters.sh
faction_rosters/empire/: galactic_empire.py  galactic_empire.tex
faction_rosters/mandalore/: mandalore.py  mandalore.tex
faction_rosters/rebel/: rebel_alliance.py  rebel_alliance.tex
faction_rosters/republic/: galactic_republic.py  galactic_republic.tex
faction_rosters/seperatist/: seperatist_alliance.py  seperatist_alliance.tex
faction_rosters/syndicates/: crime_syndicates.py  crime_syndicates.tex
firefight/: core.py  firefight.py
src/sw_firefight_engine/: core.py  firefight.py
sw_firefight_engine/: core.py
test/: dev_tests.py  model_list.tex  test_doc.tex  upgrade_A.tex
