[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sw_firefight_engine"
version = "1.0.2"
authors = [
    {name = "Rupert Eardley-Brunt"}
]
description = "SW Firefight points calculation and army list writing engine."
readme = "README.md"
dependencies = [
    "pandas",
    "jinja2"
]

[tool.hatch.build.targets.wheel]
packages = [
    "sw_firefight_engine/firefight",
    "sw_firefight_engine/core"
]
